# capstone-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  deny.toml  regenerate-capnp-schema-code.sh  regenerate-rpc-schema-code.sh  renovate.json
.github/workflows/: ci.yml  nix-flake.check.yml
async-byte-channel/: Cargo.toml
async-byte-channel/src/: lib.rs
benchmark/: Cargo.toml
capnp/: Cargo.toml
capnp-futures/: Cargo.toml
capnp-futures/src/: read_stream.rs  serialize.rs  serialize_packed.rs  write_queue.rs
capnp-futures/test/: Cargo.toml  test.rs
capnp-import/: Cargo.toml  build.rs
capnp-import/capstone/c++/src/capnp/: CMakeLists.txt
capnp-import/src/: lib.rs
capnp-macros/: Cargo.toml
capnp-macros/src/: capnp_build.rs  capnp_let.rs  capnproto_rpc.rs
capnp-macros/tests/: build_struct_tests.rs  decorator_tests.rs  decorator_tests2.rs  legacy_tests.rs  let_tests.rs  test_schema.capnp
capnp-rpc/: Cargo.toml
capnp-rpc/examples/calculator/: Cargo.toml  client.rs  server.rs
capnp-rpc/examples/hello-world/: Cargo.toml  client.rs  server.rs
capnp-rpc/examples/pubsub/: Cargo.toml  client.rs  server.rs
capnp-rpc/src/: attach.rs  lib.rs  local.rs  queued.rs  reconnect.rs  rpc.rs  rpc_capnp.rs  rpc_twoparty_capnp.rs  sender_queue.rs  split.rs  task_set.rs  twoparty.rs
capnp-rpc/test/: Cargo.toml  impls.rs  reconnect_test.rs  test.rs
capnp/fuzz/: Cargo.toml
capnp/src/: any_pointer.rs  any_pointer_list.rs  capability.rs  capability_list.rs  dynamic_list.rs  dynamic_struct.rs  dynamic_value.rs  enum_list.rs  introspect.rs  lib.rs  message.rs  primitive_list.rs  schema.rs  schema_capnp.rs  serialize.rs  text.rs  traits.rs
capnp/src/private/: arena.rs  capability.rs  layout.rs
capnp/src/serialize/: no_alloc_buffer_segments.rs
capnp/tests/: single_segment_allocator.rs
capnpc/: Cargo.toml
capnpc/src/: codegen.rs  lib.rs
capnpc/test/: Cargo.toml  test.rs
capnpc/test-edition-2015/: Cargo.toml
capnpc/test-edition-2018/: Cargo.toml
capnpc/test-edition-2021/: Cargo.toml
capnpc/test/external-crate/: Cargo.toml
example/addressbook/: Cargo.toml
example/addressbook_send/: Cargo.toml
example/fill_random_values/: Cargo.toml  fill_addressbook.rs
example/fill_random_values/src/: lib.rs
example/wasm-hello-world/: Cargo.toml
example/wasm-hello-world/wasm-app/: Cargo.toml
