[workspace]
resolver = "2"

members = [
    # main crates, published on crates.io
    "capnp",
    "capnpc",
    "capnp-futures",
    "capnp-rpc",
    "capnp-import",
    "capnp-macros",

    # testing and examples
    "async-byte-channel",
    "benchmark",
    "capnpc/test",
    "capnpc/test/external-crate",
    "capnpc/test-edition-2018",
    "capnpc/test-edition-2021",
    "capnp-futures/test",
    "capnp-rpc/examples/hello-world",
    "capnp-rpc/examples/calculator",
    "capnp-rpc/examples/pubsub",
    "capnp-rpc/test",
    "example/addressbook",
    "example/addressbook_send",
    "example/fill_random_values",
]
default-members = ["capnp", "capnp-import"]

[workspace.package]
version = "0.18.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/fundament-software/capstone-rs"
documentation = "https://docs.rs/capstone/"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.37", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
capstone = { version = "0.18", path = "./capnp" }
capstone-gen = { version = "0.18", path = "./capnpc" }
capstone-rpc = { version = "0.18", path = "./capnp-rpc" }
capstone-import = { version = "0.18", path = "./capnp-import" }
capstone-macros = { version = "0.18", path = "./capnp-macros" }
capstone-futures = { version = "0.18", path = "./capnp-futures" }
async-byte-channel = { path = "./async-byte-channel" }
futures-util = "0.3"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
eyre = "0.6"
tempfile = "3.*"

[workspace.lints]