[package]
name = "async-byte-channel"
version = "0.0.1"
license.workspace = true
description = "Helper library for writing async tests"

repository.workspace = true
edition.workspace = true

[dependencies.tokio]
workspace = true
features = ["io-util"]

[dev-dependencies.tokio]
workspace = true
features = ["io-util", "rt"]
