[package]

name = "benchmark"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition.workspace = true
license.workspace = true

[[bin]]

name = "benchmark"
path = "benchmark.rs"

[[bin]]

name = "run_all_benchmarks"
path = "run_all.rs"

[dependencies]
capstone.workspace = true
capstone-import.workspace = true
