[package]
name = "capstone-futures"
version.workspace = true
authors = ["David Renshaw <drenshaw@gmail.com>"]
license.workspace = true
description = "async serialization for Cap'n Proto messages"
repository.workspace = true
documentation = "https://docs.rs/capstone-futures/"
edition.workspace = true
readme = "README.md"

keywords = ["async"]

[lib]
name = "capnp_futures"

[dependencies]
capstone.workspace = true
quickcheck = { version = "1", optional = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream.workspace = true

[dev-dependencies]
capstone = { workspace = true, features = ["quickcheck"] }
tokio = { workspace = true, features = ["io-util", "rt"] }
quickcheck = "1"
