[package]
name = "capstone-macros"
version.workspace = true
edition.workspace = true

[lib]
name = "capnp_macros"
proc-macro = true

[dependencies]
capstone.workspace = true
capstone-rpc.workspace = true
convert_case = "0.6"
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dev-dependencies]
# For testing
capstone-import.workspace = true
tokio.workspace = true

[lints]
workspace = true
