[package]

name = "capstone-rpc"
version.workspace = true
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
license.workspace = true
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository.workspace = true
documentation = "https://docs.rs/capstone-rpc/"
categories = ["network-programming"]
autoexamples = false
edition.workspace = true

readme = "README.md"

[lib]
name = "capnp_rpc"

[dependencies.futures]
workspace = true

[dependencies]
capstone-futures.workspace = true
capstone.workspace = true
tokio.workspace = true
