[package]
name = "capstone-gen"
version.workspace = true
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
license.workspace = true
description = "Cap'n Proto code generation"
repository.workspace = true
documentation = "https://docs.rs/capstone-gen/"
edition.workspace = true
readme = "README.md"

keywords = ["encoding", "protocol", "serialization"]

[lib]
name = "capnpc"

[[bin]]

name = "capnpc-rust"
path = "src/capnpc-rust.rs"

[[bin]]

name = "capnpc-rust-bootstrap"
path = "src/capnpc-rust-bootstrap.rs"


[dependencies.capstone]
workspace = true
