[package]

name = "capnp-futures-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@gmail.com>"]
edition = "2021"

[lib]

name = "capnp_futures_test"
path = "test.rs"

[dependencies]
capstone-futures.workspace = true
capstone.workspace = true
capstone-import.workspace = true
tokio.workspace = true
async-byte-channel.workspace = true
