[package]

name = "capnp-rpc-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition.workspace = true

[lib]

name = "capnp_rpc_test"
path = "test.rs"

[dependencies]
capstone-rpc.workspace = true
capstone.workspace = true
async-byte-channel.workspace = true
tokio.workspace = true
futures-util.workspace = true

[dev-dependencies]
capstone-import.workspace = true
