[package]

name = "capnpc-test-edition-2015"
version = "0.0.0"
build = "build.rs"
edition = "2015"

[lib]

name = "capnpc_test_edition_2015"
path = "test.rs"

[build-dependencies]
capstone-gen.workspace = true
capstone-import.workspace = true
tempfile.workspace = true
eyre.workspace = true

[dependencies]
capstone.workspace = true
capstone-gen.workspace = true
external-crate = { path = "../test/external-crate" }
