[package]

name = "capnpc-test-edition-2021"
version = "0.0.0"
build = "build.rs"
edition = "2021"
license.workspace = true

[lib]

name = "capnpc_test_edition_2021"
path = "test.rs"

[build-dependencies]
capstone-gen.workspace = true
capstone-import.workspace = true
tempfile.workspace = true
eyre.workspace = true

[dependencies]
capstone.workspace = true
capstone-gen.workspace = true
external-crate = { path = "../test/external-crate" }
