[package]

name = "capnpc-test"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
build = "build.rs"
edition = "2021"

[lib]

name = "capnpc_test"
path = "test.rs"

[build-dependencies]
capstone-gen.workspace = true
capstone-import.workspace = true
tempfile.workspace = true
eyre.workspace = true

[dependencies]
capstone.workspace = true
capstone-gen.workspace = true
external-crate = { path = "./external-crate" }
