[package]
name = "wasm-hello-world"
version = "0.1.0"
edition = "2018"
license.workspace = true

# Avoid getting picked up by parent workspaces.
[workspace]
members = ["."]

[dependencies]
wasmer = "4.0.0"

[dependencies.capstone]
path = "../../capstone"

[dependencies.capstone-import]
path = "../../capstone-import"
