[package]

name = "calculator"
version = "0.0.0"
authors = ["David Renshaw <dwrenshaw@sandstorm.io>"]
edition.workspace = true
license.workspace = true

[[bin]]

name = "calculator"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-import.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
capstone-rpc.workspace = true
