[package]

name = "hello-world"
version = "0.0.0"
authors = ["Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"]
edition.workspace = true
license.workspace = true

[[bin]]
name = "hello-world"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-import.workspace = true
tokio.workspace = true
tokio-util.workspace = true
capstone-rpc.workspace = true
