[package]
name = "pubsub"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
edition.workspace = true

[[bin]]
name = "pubsub"
path = "main.rs"

[dependencies]
capstone.workspace = true
capstone-import.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
capstone-rpc.workspace = true
