[package]
name = "external-crate"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone.workspace = true

[build-dependencies]
capstone-import.workspace = true
capstone-gen.workspace = true
tempfile.workspace = true
anyhow.workspace = true
